fix css bug in time-to-read on mobile (#46)

--- a/_sass/_tutorial.scss
+++ b/_sass/_tutorial.scss
@@ -14,3 +14,11 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .tutorial #timeToRead {
+    white-space: nowrap;
+    margin-top: 4px;
+    display: inline-block;
+  }
+}
